opam-version: "2.0"
compiler: [
  "base-bigarray.base"
  "base-threads.base"
  "base-unix.base"
  "ocaml-system.4.02.3"
]
roots: [
  "ocaml-system.4.02.3" "ocplib-endian.1.0" "operf-macro.0.2" "perf.0.1"
]
installed: [
  "base-bigarray.base"
  "base-bytes.base"
  "base-ocamlbuild.base"
  "base-threads.base"
  "base-unix.base"
  "cmdliner.1.0.2"
  "conf-m4.1"
  "cppo.1.6.0"
  "fileutils.0.5.2"
  "jbuilder.1.0+beta14"
  "oasis.0.4.10"
  "ocaml.4.02.3"
  "ocaml-system.4.02.3"
  "ocaml-xdg-basedir.0.0.2"
  "ocamlbuild.0"
  "ocamlfind.1.7.3"
  "ocamlify.0.0.1"
  "ocamlmod.0.0.9"
  "oclock.0.4.0"
  "ocplib-endian.1.0"
  "operf-macro.0.2"
  "ounit.2.0.6"
  "perf.0.1"
  "ppx_core.113.09.00"
  "ppx_deriving.3.2"
  "ppx_driver.113.09.00"
  "ppx_optcomp.113.09.00"
  "ppx_sexp_conv.113.09.00"
  "ppx_tools.5.0+4.02.0"
  "ppx_type_conv.113.09.00"
  "re.1.7.1"
  "result.1.2"
  "sexplib.113.00.00"
  "topkg.0.9.1"
]
pinned: ["operf-macro.0.2" "perf.0.1"]
package "operf-macro" {
  opam-version: "2.0"
  version: "0.2"
  maintainer: "Pierre Chambart <pierre.chambart@ocamlpro.com>"
  authors: "Vincent Bernardoff <vincent.bernardoff@ocamlpro.com>"
  license: "GPLv2"
  homepage: "http://github.com/OCamlPro/operf-macro"
  bug-reports: "http://github.com/OCamlPro/operf-macro/issues"
  depends: [
    "ocaml"
    "ocamlfind" {build}
    "ppx_sexp_conv"
    "re" {>= "1.3.0"}
    "cmdliner"
    "perf"
    "ocaml-xdg-basedir"
  ]
  flags: light-uninstall
  build: ["ocaml" "pkg/build.ml" "native=true" "native-dynlink=true"]
  dev-repo: "git://github.com/OCamlPro/operf-macro"
  url {
    src: "git://github.com/OCamlPro/operf-macro#opam2"
  }
}
package "perf" {
  opam-version: "2.0"
  version: "0.1"
  maintainer: "Pierre Chambart <pierre.chambart@ocamlpro.com>"
  authors: "Vincent Bernardoff <vincent.bernardoff@ocamlpro.com>"
  license: "GPLv2"
  homepage: "http://github.com/OCamlPro/ocaml-perf"
  bug-reports: "http://github.com/OCamlPro/ocaml-perf/issues"
  depends: [
    "ocaml"
    "ocamlfind" {build}
    "oasis"
    "ocplib-endian"
    "sexplib"
    "oclock"
  ]
  flags: light-uninstall
  build: [
    ["oasis" "setup"]
    [make]
    [make "install"]
  ]
  remove: ["ocamlfind" "remove" "perf"]
  dev-repo: "git://github.com/OCamlPro/ocaml-perf"
  url {
    src: "git://github.com/ocamlpro/ocaml-perf"
  }
}
